.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Transfer_Service_Request_Type__c.object
<CustomObject>
    <description>Used to configure service types that are candidates as the target of a service request transfer (changing the service type of an existing service request)</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>Incap311__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__For_Activity_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Transfer record is for Service Type activity transfers.</description>
        <label>For Activity Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__From_Service_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>From Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Transfer Service Request Types (From Service Type)</relationshipLabel>
        <relationshipName>Transfer_Service_Request_Types1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__To_Service_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Transfer Service Request Types</relationshipLabel>
        <relationshipName>Transfer_Service_Request_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Transfer Service Request Type</label>
    <nameField>
        <displayFormat>TSRT-{0000}</displayFormat>
        <label>Transfer Service Request Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Service Request Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>